--- a/blog-eight.html
+++ b/blog-eight.html
@@ -122,9 +122,8 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">Gynaecology</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Your trusted partner in women’s
+                        reproductive and gynecological health.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
                             href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> /
@@ -285,7 +284,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
