--- a/blog-four.html
+++ b/blog-four.html
@@ -121,9 +121,8 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">Infertility Treatments</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Understanding treatment options,
+                        support, and care for infertility.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
                             href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> /
@@ -204,61 +203,102 @@
 
 
                 <div class="col-lg-8">
-                    <div class="blog-details-card"  data-aos="fade-left" data-aos-delay="200">
+                    <div class="blog-details-card" data-aos="fade-left" data-aos-delay="200">
                         <h2 class="blog-head-title" id="understanding">Breaking The Costs Of Infertility Treatments</h2>
                         <br>
                         <!-- Introduction -->
                         <h2>Introduction to Infertility Treatments</h2>
-                        <p class="">Infertility can be a challenging journey for couples longing to start a family. Fortunately, advancements in medical science offer various treatments to overcome fertility issues. However, along with hope comes the consideration of costs. Understanding the expenses involved in infertility treatments is crucial for making informed decisions.</p>
+                        <p class="">Infertility can be a challenging journey for couples longing to start a family.
+                            Fortunately, advancements in medical science offer various treatments to overcome fertility
+                            issues. However, along with hope comes the consideration of costs. Understanding the
+                            expenses involved in infertility treatments is crucial for making informed decisions.</p>
 
 
-                        <h2 class="blog-head-title" id="types">Understanding the Costs Associated with Infertility Treatments</h2>
-                        <p><strong>Infertility Treatment</strong> costs can vary significantly depending on several factors. These include the type of treatment, the clinic’s location, the specialist’s expertise, and insurance coverage. It’s essential to grasp these factors to anticipate and plan for the expenses effectively.</p>
+                        <h2 class="blog-head-title" id="types">Understanding the Costs Associated with Infertility
+                            Treatments</h2>
+                        <p><strong>Infertility Treatment</strong> costs can vary significantly depending on several
+                            factors. These include the type of treatment, the clinic’s location, the specialist’s
+                            expertise, and insurance coverage. It’s essential to grasp these factors to anticipate and
+                            plan for the expenses effectively.</p>
 
 
                         <h2 class="blog-head-title" id="surgery-needed">Exploring Infertility Treatment Options</h2>
-                        <p>When it comes to infertility treatments, there are several options available, each with its own costs and success rates. In vitro fertilization (IVF), intrauterine insemination (IUI), and egg freezing are among the most common procedures. Understanding these treatments and their associated costs is crucial for couples embarking on their fertility journey.</p>
+                        <p>When it comes to infertility treatments, there are several options available, each with its
+                            own costs and success rates. In vitro fertilization (IVF), intrauterine insemination (IUI),
+                            and egg freezing are among the most common procedures. Understanding these treatments and
+                            their associated costs is crucial for couples embarking on their fertility journey.</p>
 
 
                         <h2 class="blog-head-title" id="diagnosis">Cost Breakdown of Infertility Treatments</h2>
-                        <p>Breaking down the costs of infertility treatments involves considering various components. These include initial consultations, diagnostic tests, medications, procedures such as egg retrieval and embryo transfer, as well as additional services like genetic testing and counseling.</p>
+                        <p>Breaking down the costs of infertility treatments involves considering various components.
+                            These include initial consultations, diagnostic tests, medications, procedures such as egg
+                            retrieval and embryo transfer, as well as additional services like genetic testing and
+                            counseling.</p>
 
 
-                        <h2 class="blog-head-title" id="right">Importance of Choosing the Right Infertility Specialist</h2>
-                        <p>Selecting the right infertility specialist, such as Dr. Divya Kumar, can significantly impact the success and cost of treatments. Experienced specialists offer personalized care and guidance, increasing the chances of a successful outcome while minimizing unnecessary expenses.</p>
+                        <h2 class="blog-head-title" id="right">Importance of Choosing the Right Infertility Specialist
+                        </h2>
+                        <p>Selecting the right infertility specialist, such as Dr. Divya Kumar, can significantly impact
+                            the success and cost of treatments. Experienced specialists offer personalized care and
+                            guidance, increasing the chances of a successful outcome while minimizing unnecessary
+                            expenses.</p>
 
-                        
-                        <h2 class="blog-head-title" id="preparation">Factors Affecting the Cost of Infertility Treatments</h2>
-                        <p>Several factors influence the cost of infertility treatments, including the location of the clinic, its reputation and success rates, and insurance coverage. Understanding these factors allows couples to explore options that align with their budget and expectations.</p>
+
+                        <h2 class="blog-head-title" id="preparation">Factors Affecting the Cost of Infertility
+                            Treatments</h2>
+                        <p>Several factors influence the cost of infertility treatments, including the location of the
+                            clinic, its reputation and success rates, and insurance coverage. Understanding these
+                            factors allows couples to explore options that align with their budget and expectations.</p>
 
 
                         <h2 class="blog-head-title" id="recovery">Financing Options for Infertility Treatments</h2>
-                        <p>While infertility treatments can be costly, there are various financing options available to make them more accessible. These include insurance coverage, payment plans offered by clinics, as well as grants and scholarships for those in need of financial assistance.</p>
+                        <p>While infertility treatments can be costly, there are various financing options available to
+                            make them more accessible. These include insurance coverage, payment plans offered by
+                            clinics, as well as grants and scholarships for those in need of financial assistance.</p>
 
-                        
+
                         <h2 class="blog-head-title" id="why-choose">Balancing Costs and Expectations</h2>
-                        <p>Navigating the costs of infertility treatments can be emotionally and financially taxing. It’s essential for couples to balance their expectations with the realities of their financial situation. Seeking support from loved ones and professionals can help alleviate some of the stress associated with fertility treatments.</p>
+                        <p>Navigating the costs of infertility treatments can be emotionally and financially taxing.
+                            It’s essential for couples to balance their expectations with the realities of their
+                            financial situation. Seeking support from loved ones and professionals can help alleviate
+                            some of the stress associated with fertility treatments.</p>
 
 
                         <h2 class="blog-head-title" id="conclusion">Conclusion</h2>
-                        <p><strong>Infertility treatments in faridabad</strong> offer hope to couples struggling to conceive, but they come with significant financial considerations. By understanding the costs involved, exploring treatment options, and seeking guidance from experienced specialists like Dr. Divya Kumar, couples can make informed decisions that align with their budget and goals.</p>
+                        <p><strong>Infertility treatments in faridabad</strong> offer hope to couples struggling to
+                            conceive, but they come with significant financial considerations. By understanding the
+                            costs involved, exploring treatment options, and seeking guidance from experienced
+                            specialists like Dr. Divya Kumar, couples can make informed decisions that align with their
+                            budget and goals.</p>
 
 
                         <h2 class="blog-head-title" id="faqs">FAQs</h2>
                         <h5>How much does infertility treatment cost on average ?</h5>
-                        <p>The cost of infertility treatments varies widely depending on factors such as the type of treatment, location, and clinic reputation. On average, couples can expect to spend several thousand dollars on treatments like IVF.</p>
+                        <p>The cost of infertility treatments varies widely depending on factors such as the type of
+                            treatment, location, and clinic reputation. On average, couples can expect to spend several
+                            thousand dollars on treatments like IVF.</p>
 
                         <h5>Does insurance cover infertility treatments ?</h5>
-                        <p>Some insurance plans offer coverage for infertility treatments, but the extent of coverage varies. It’s essential to check with your insurance provider to understand what is included in your plan.</p>
+                        <p>Some insurance plans offer coverage for infertility treatments, but the extent of coverage
+                            varies. It’s essential to check with your insurance provider to understand what is included
+                            in your plan.</p>
 
-                        <h5>Are there any grants or financial assistance programs available for infertility treatments?</h5>
-                        <p>Yes, there are organizations and foundations that offer grants and scholarships to help individuals and couples afford infertility treatments. These programs often have specific eligibility criteria, so it’s essential to research and apply accordingly.</p>
+                        <h5>Are there any grants or financial assistance programs available for infertility treatments?
+                        </h5>
+                        <p>Yes, there are organizations and foundations that offer grants and scholarships to help
+                            individuals and couples afford infertility treatments. These programs often have specific
+                            eligibility criteria, so it’s essential to research and apply accordingly.</p>
 
                         <h5>How can I find a reputable infertility specialist ?</h5>
-                        <p>Researching online reviews, asking for recommendations from your primary care physician or friends who have undergone infertility treatments, and scheduling consultations with potential specialists are all ways to find a reputable infertility specialist.</p>
+                        <p>Researching online reviews, asking for recommendations from your primary care physician or
+                            friends who have undergone infertility treatments, and scheduling consultations with
+                            potential specialists are all ways to find a reputable infertility specialist.</p>
 
                         <h5>What should I consider when budgeting for infertility treatments ?</h5>
-                        <p>When budgeting for infertility treatments, consider not only the upfront costs of procedures and medications but also potential additional expenses such as diagnostic tests, travel costs, and any unforeseen complications. It’s also essential to factor in emotional support and self-care during the process.</p>
+                        <p>When budgeting for infertility treatments, consider not only the upfront costs of procedures
+                            and medications but also potential additional expenses such as diagnostic tests, travel
+                            costs, and any unforeseen complications. It’s also essential to factor in emotional support
+                            and self-care during the process.</p>
 
                         <!-- Tags -->
                         <div class="mt-4">
@@ -276,7 +316,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
