--- a/blog-one.html
+++ b/blog-one.html
@@ -121,9 +121,8 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">Ovarian Cysts Surgery</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Understanding symptoms, treatment
+                        options, and surgical approaches for ovarian cysts.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
                             href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> / How
@@ -198,7 +197,7 @@
 
 
                 <div class="col-lg-8">
-                    <div class="blog-details-card"  data-aos="fade-left" data-aos-delay="200">
+                    <div class="blog-details-card" data-aos="fade-left" data-aos-delay="200">
                         <h2 class="blog-head-title" id="understanding">How To Treat Ovarian Cysts: Expert Tips From Dr.
                             Divya Kumar</h2>
                         <!-- Introduction -->
@@ -313,16 +312,20 @@
                         <ul>
                             <li><strong>Medical Evaluation:</strong> Imaging and blood tests are performed in a
                                 determination of overall health.</li>
-                            <li><strong>Fasting:</strong> Most commonly necessitating admission 8-12 hours prior to operation.</li>
-                            <li><strong>Medications:</strong> Advice regarding current drugs and allergies must be given.</li>
+                            <li><strong>Fasting:</strong> Most commonly necessitating admission 8-12 hours prior to
+                                operation.</li>
+                            <li><strong>Medications:</strong> Advice regarding current drugs and allergies must be
+                                given.</li>
                         </ul>
 
                         <!-- Recovery Section -->
                         <h2 class="blog-head-title" id="recovery">Post-Operative Care and Recovery</h2>
                         <p>Different surgeries have different recovery patterns:</p>
                         <ol>
-                            <li>Discharge from laparoscopic surgery is normally on the same day or within a day, and post-operative recuperation consists of 1 to 2 weeks of relaxation.</li>
-                            <li>Patients undergoing laparotomy require hospitalization for 2 to 4 days and a recovery period of 4 to 6 weeks.</li>
+                            <li>Discharge from laparoscopic surgery is normally on the same day or within a day, and
+                                post-operative recuperation consists of 1 to 2 weeks of relaxation.</li>
+                            <li>Patients undergoing laparotomy require hospitalization for 2 to 4 days and a recovery
+                                period of 4 to 6 weeks.</li>
                         </ol>
 
                         <strong>Tips for a Smooth Recovery:</strong>
@@ -332,7 +335,8 @@
                             <li>Maintain follow-ups with the doctor to check recovery.</li>
                         </ol>
 
-                        <p>Dr. Divya Kumar offers personal post-operative care for her patients in follow-up with advice on pain relief and complication avoidance.</p>
+                        <p>Dr. Divya Kumar offers personal post-operative care for her patients in follow-up with advice
+                            on pain relief and complication avoidance.</p>
 
                         <!-- <div class="highlight-box">
                                     <h4><i class="fas fa-heartbeat"></i> Recovery Timeline</h4>
@@ -354,29 +358,37 @@
                         </div> -->
 
                         <!-- Why Choose Dr. Divya -->
-                        <h2 class="blog-head-title" id="why-choose">Why Choose Dr. Divya Kumar for Ovarian Cyst Surgery in Faridabad ?
+                        <h2 class="blog-head-title" id="why-choose">Why Choose Dr. Divya Kumar for Ovarian Cyst Surgery
+                            in Faridabad ?
                         </h2>
-                        <p>Dr. Divya Kumar specializes in minimally invasive gynecologic procedures and individualized patient care. Her treatment philosophy centers around:</p>
+                        <p>Dr. Divya Kumar specializes in minimally invasive gynecologic procedures and individualized
+                            patient care. Her treatment philosophy centers around:</p>
                         <ul>
                             <li>Proper diagnosis with high-tech imaging.</li>
                             <li>Minimally invasive surgical methods for faster recuperation.</li>
                             <li>Personalized care and thorough follow-up sessions.</li>
                         </ul>
-                        <p>Her vast experience and success rate made her one of the best ovarian cyst surgery specialists in Faridabad.</p>
+                        <p>Her vast experience and success rate made her one of the best ovarian cyst surgery
+                            specialists in Faridabad.</p>
 
                         <!-- Important Note -->
                         <div class="information-box">
                             <h5>Important Note :</h5>
                             <ul>
                                 <li>Most ovarian cysts are benign and harmless.</li>
-                                <li>Regular check-ups and discussions with a healthcare provider are essential, especially if you have any symptoms or concerns.</li>
-                                <li>If you are suffering extreme pain, excessive bleeding, or any other troubling signs, seek medical attention right away.</li>
+                                <li>Regular check-ups and discussions with a healthcare provider are essential,
+                                    especially if you have any symptoms or concerns.</li>
+                                <li>If you are suffering extreme pain, excessive bleeding, or any other troubling signs,
+                                    seek medical attention right away.</li>
                             </ul>
                         </div>
 
                         <!-- Conclusion -->
                         <h2 class="blog-head-title" id="conclusion">Conclusion</h2>
-                        <p>Surgical excision of ovarian cysts can significantly improve quality of life, especially when performed by an experienced specialist like Dr. Divya Kumar in Faridabad.  If you or a family member is experiencing symptoms of an ovarian cyst, seek medical attention as soon as possible to ensure optimal care and recovery.</p>
+                        <p>Surgical excision of ovarian cysts can significantly improve quality of life, especially when
+                            performed by an experienced specialist like Dr. Divya Kumar in Faridabad. If you or a family
+                            member is experiencing symptoms of an ovarian cyst, seek medical attention as soon as
+                            possible to ensure optimal care and recovery.</p>
 
                         <!-- Tags -->
                         <div class="mt-4">
@@ -394,7 +406,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
