--- a/blog-seven.html
+++ b/blog-seven.html
@@ -117,17 +117,17 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="about-hero pb-5" style="padding-top: 150px;"> 
+    <header class="about-hero pb-5" style="padding-top: 150px;">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">High Risk Pregnancy</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn about the precautions,
+                        monitoring, and support needed for a safe high-risk pregnancy.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
-                            href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> / High Risk Pregnancy: What You Need to Know
+                            href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> /
+                        High Risk Pregnancy: What You Need to Know
                     </div>
                 </div>
             </div>
@@ -159,13 +159,13 @@
                             <div class="toc-item" onclick="scrollToSection('ovarian')">
                                 <i class="fas fa-chevron-right me-2"></i> Treatment
                             </div>
-                             <div class="toc-item" onclick="scrollToSection('monitoring')">
+                            <div class="toc-item" onclick="scrollToSection('monitoring')">
                                 <i class="fas fa-chevron-right me-2"></i> Patient-Centered Approach
                             </div>
                             <div class="toc-item" onclick="scrollToSection('consult')">
                                 <i class="fas fa-chevron-right me-2"></i> Collaborative Care Network
                             </div>
-                           
+
                             <div class="toc-item" onclick="scrollToSection('retrieval')">
                                 <i class="fas fa-chevron-right me-2"></i> Conclusion
                             </div>
@@ -225,39 +225,82 @@
                 <div class="col-lg-8">
                     <div class="blog-details-card" data-aos="fade-left" data-aos-delay="200">
                         <h2 class="blog-head-title" id="high">High-Risk Pregnancy: What You Need to Know</h2>
-                        
-                        <p class="">Pregnancy is a beautiful journey filled with excitement and anticipation. However, for some women, the journey can be fraught with concerns and challenges due to high-risk factors. In such cases, seeking the expertise of a qualified obstetrician specializing in high-risk pregnancies becomes crucial. Dr. Divya Kumar, recognized as one of the best gynecologists in Faridabad, offers comprehensive care and specialized treatment for high-risk pregnancies. Let’s delve into what high-risk pregnancy entails and how Dr. Divya Kumar can guide you through this delicate phase with utmost care and expertise.</p>
+
+                        <p class="">Pregnancy is a beautiful journey filled with excitement and anticipation. However,
+                            for some women, the journey can be fraught with concerns and challenges due to high-risk
+                            factors. In such cases, seeking the expertise of a qualified obstetrician specializing in
+                            high-risk pregnancies becomes crucial. Dr. Divya Kumar, recognized as one of the best
+                            gynecologists in Faridabad, offers comprehensive care and specialized treatment for
+                            high-risk pregnancies. Let’s delve into what high-risk pregnancy entails and how Dr. Divya
+                            Kumar can guide you through this delicate phase with utmost care and expertise.</p>
 
                         <!-- Understanding Section -->
                         <h2 class="blog-head-title" id="choose">Understanding High-Risk Pregnancy</h2>
-                        <p>A high-risk pregnancy refers to a pregnancy where the mother or baby faces an increased risk of complications before, during, or after childbirth. Various factors contribute to the classification of a pregnancy as high-risk, including maternal age, pre-existing medical conditions such as diabetes or hypertension, multiple pregnancies (twins, triplets), genetic factors, lifestyle choices such as smoking or substance abuse, and previous pregnancy complications.</p>
+                        <p>A high-risk pregnancy refers to a pregnancy where the mother or baby faces an increased risk
+                            of complications before, during, or after childbirth. Various factors contribute to the
+                            classification of a pregnancy as high-risk, including maternal age, pre-existing medical
+                            conditions such as diabetes or hypertension, multiple pregnancies (twins, triplets), genetic
+                            factors, lifestyle choices such as smoking or substance abuse, and previous pregnancy
+                            complications.</p>
 
                         <!-- Types of Cysts -->
                         <h2 class="blog-head-title" id="meet">Dr. Divya Kumar’s Expertise</h2>
-                        <p>Dr. Divya Kumar, renowned as the best high-risk pregnancy doctor in Faridabad, possesses extensive experience and expertise in managing complex pregnancies. Her compassionate approach coupled with advanced medical knowledge ensures that each patient receives personalized care tailored to their unique needs. Dr. Divya Kumar employs a multidisciplinary approach, collaborating with other specialists as necessary to optimize maternal and fetal outcomes.</p>
+                        <p>Dr. Divya Kumar, renowned as the best high-risk pregnancy doctor in Faridabad, possesses
+                            extensive experience and expertise in managing complex pregnancies. Her compassionate
+                            approach coupled with advanced medical knowledge ensures that each patient receives
+                            personalized care tailored to their unique needs. Dr. Divya Kumar employs a
+                            multidisciplinary approach, collaborating with other specialists as necessary to optimize
+                            maternal and fetal outcomes.</p>
 
 
                         <!-- When Surgery is Needed -->
                         <h2 class="blog-head-title" id="process">Comprehensive Evaluation and Care</h2>
 
-                        <p>One of the hallmarks of Dr. Divya Kumar’s practice is her commitment to thorough evaluation and proactive management of high-risk pregnancies. From the initial consultation to postnatal care, every step is meticulously planned to minimize risks and ensure the well-being of both mother and baby. Through a combination of regular prenatal screenings, advanced diagnostic tests, and close monitoring, Dr. Divya Kumar identifies potential complications early and intervenes promptly to mitigate them.</p>
+                        <p>One of the hallmarks of Dr. Divya Kumar’s practice is her commitment to thorough evaluation
+                            and proactive management of high-risk pregnancies. From the initial consultation to
+                            postnatal care, every step is meticulously planned to minimize risks and ensure the
+                            well-being of both mother and baby. Through a combination of regular prenatal screenings,
+                            advanced diagnostic tests, and close monitoring, Dr. Divya Kumar identifies potential
+                            complications early and intervenes promptly to mitigate them.</p>
 
                         <!-- Diagnostic Procedures -->
                         <h2 class="blog-head-title" id="ovarian">High-Risk Pregnancy Treatment</h2>
-                        <p>The treatment approach for high-risk pregnancies varies depending on the underlying factors and specific risks involved. Dr. Divya Kumar adopts a holistic approach, incorporating a range of interventions to optimize maternal and fetal health. This may include lifestyle modifications, medication management, specialized prenatal care, fetal monitoring, and, in some cases, surgical interventions. Dr. Divya Kumar ensures that her patients are well-informed and actively involved in decision-making regarding their care, empowering them to navigate this challenging journey with confidence and positivity.</p>
+                        <p>The treatment approach for high-risk pregnancies varies depending on the underlying factors
+                            and specific risks involved. Dr. Divya Kumar adopts a holistic approach, incorporating a
+                            range of interventions to optimize maternal and fetal health. This may include lifestyle
+                            modifications, medication management, specialized prenatal care, fetal monitoring, and, in
+                            some cases, surgical interventions. Dr. Divya Kumar ensures that her patients are
+                            well-informed and actively involved in decision-making regarding their care, empowering them
+                            to navigate this challenging journey with confidence and positivity.</p>
 
                         <!-- Types of Surgery -->
                         <h2 class="blog-head-title" id="monitoring">Patient-Centered Approach</h2>
 
-                        <p>At Dr. Divya Kumar’s clinic, patient satisfaction and well-being take precedence above all else. Every interaction is characterized by empathy, respect, and open communication. Dr. Divya Kumar takes the time to listen to her patients’ concerns, address their queries, and provide them with the support they need throughout their pregnancy journey. Whether it’s offering reassurance during moments of anxiety or celebrating milestones together, Dr. Divya Kumar establishes a strong doctor-patient relationship built on trust and mutual respect.</p>
+                        <p>At Dr. Divya Kumar’s clinic, patient satisfaction and well-being take precedence above all
+                            else. Every interaction is characterized by empathy, respect, and open communication. Dr.
+                            Divya Kumar takes the time to listen to her patients’ concerns, address their queries, and
+                            provide them with the support they need throughout their pregnancy journey. Whether it’s
+                            offering reassurance during moments of anxiety or celebrating milestones together, Dr. Divya
+                            Kumar establishes a strong doctor-patient relationship built on trust and mutual respect.
+                        </p>
 
                         <!-- Pre-Surgical Preparation -->
                         <h2 class="blog-head-title" id="consult">Collaborative Care Network</h2>
-                        <p>Recognizing the complexity of high-risk pregnancies, Dr. Divya Kumar collaborates closely with a network of specialists including perinatologists, neonatologists, genetic counselors, and nutritionists to ensure comprehensive care for her patients. This collaborative approach enables seamless coordination of services and access to specialized expertise, enhancing the quality of care delivered to mothers and their babies.</p>
+                        <p>Recognizing the complexity of high-risk pregnancies, Dr. Divya Kumar collaborates closely
+                            with a network of specialists including perinatologists, neonatologists, genetic counselors,
+                            and nutritionists to ensure comprehensive care for her patients. This collaborative approach
+                            enables seamless coordination of services and access to specialized expertise, enhancing the
+                            quality of care delivered to mothers and their babies.</p>
 
 
                         <h2 class="blog-head-title" id="retrieval">Conclusion</h2>
-                        <p>A high-risk pregnancy demands expert care and specialized attention to ensure the best possible outcomes for both mother and baby. With Dr. Divya Kumar, the best gynecologist in Faridabad specializing in high-risk pregnancies, expectant mothers can rest assured that they are in capable hands. Through her unwavering commitment to excellence, compassionate approach, and personalized care, Dr. Divya Kumar guides mothers through this challenging phase with compassion, expertise, and dedication, paving the way for a positive pregnancy experience and a healthy delivery.</p>
+                        <p>A high-risk pregnancy demands expert care and specialized attention to ensure the best
+                            possible outcomes for both mother and baby. With Dr. Divya Kumar, the best gynecologist in
+                            Faridabad specializing in high-risk pregnancies, expectant mothers can rest assured that
+                            they are in capable hands. Through her unwavering commitment to excellence, compassionate
+                            approach, and personalized care, Dr. Divya Kumar guides mothers through this challenging
+                            phase with compassion, expertise, and dedication, paving the way for a positive pregnancy
+                            experience and a healthy delivery.</p>
 
                         <!-- Tags -->
                         <div class="mt-4">
@@ -275,7 +318,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
