--- a/blog-three.html
+++ b/blog-three.html
@@ -121,12 +121,12 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading" data-aos="fade-up" data-aos-delay="200">Egg Donor</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Understanding the process, benefits,
+                        and considerations of egg donation.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
-                            href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> / The Basics Of Egg Donation
+                            href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> / The
+                        Basics Of Egg Donation
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
     </header>
 
 
-    <section style="overflow: visible;" >
+    <section style="overflow: visible;">
         <div class="container">
             <div class="row">
                 <!-- Sidebar -->
@@ -200,65 +200,110 @@
 
 
                 <div class="col-lg-8">
-                    <div class="blog-details-card"  data-aos="fade-left" data-aos-delay="200">
-                        <h2 class="blog-head-title" id="understanding">The Basics Of Egg Donation: What You Need To Know</h2>
+                    <div class="blog-details-card" data-aos="fade-left" data-aos-delay="200">
+                        <h2 class="blog-head-title" id="understanding">The Basics Of Egg Donation: What You Need To Know
+                        </h2>
                         <!-- Introduction -->
-                        <p class="">Egg donation is a process where a woman (known as the donor) provides her eggs to help another woman or couple (the recipients) conceive a child. This selfless act can bring immense joy to individuals or couples struggling with infertility. In this article, we’ll explore the fundamentals of egg donation, the process involved, and what you need to know if you’re considering this option.</p>
+                        <p class="">Egg donation is a process where a woman (known as the donor) provides her eggs to
+                            help another woman or couple (the recipients) conceive a child. This selfless act can bring
+                            immense joy to individuals or couples struggling with infertility. In this article, we’ll
+                            explore the fundamentals of egg donation, the process involved, and what you need to know if
+                            you’re considering this option.</p>
 
                         <!-- Understanding Section -->
                         <h2 class="blog-head-title" id="types">What is Egg Donation ?</h2>
-                        <p>Egg donation involves the retrieval of eggs from a donor, typically a young and healthy woman, to be used in assisted reproductive techniques such as in vitro fertilization (IVF). These donated eggs are fertilized with sperm in a laboratory, and the resulting embryos are transferred to the uterus of the recipient.</p>
+                        <p>Egg donation involves the retrieval of eggs from a donor, typically a young and healthy
+                            woman, to be used in assisted reproductive techniques such as in vitro fertilization (IVF).
+                            These donated eggs are fertilized with sperm in a laboratory, and the resulting embryos are
+                            transferred to the uterus of the recipient.</p>
 
                         <!-- Types of Cysts -->
                         <h2 class="blog-head-title" id="surgery-needed">Importance of Egg Donation</h2>
-                        <p>For individuals or couples facing challenges with fertility, egg donation offers a ray of hope. It provides an opportunity to fulfill the dream of parenthood when other options may not be viable. Egg donation can be particularly beneficial for women who are unable to produce viable eggs due to various medical reasons.</p>
+                        <p>For individuals or couples facing challenges with fertility, egg donation offers a ray of
+                            hope. It provides an opportunity to fulfill the dream of parenthood when other options may
+                            not be viable. Egg donation can be particularly beneficial for women who are unable to
+                            produce viable eggs due to various medical reasons.</p>
 
 
                         <!-- When Surgery is Needed -->
                         <h2 class="blog-head-title" id="diagnosis">The Process of Egg Donation</h2> <br>
                         <h5 class="text-start">Initial Consultation</h5>
 
-                        <p>The journey begins with an initial consultation with a fertility specialist or reproductive endocrinologist. During this appointment, both the donor and the recipient (if applicable) will discuss the process in detail, including the medical and legal aspects.</p>
+                        <p>The journey begins with an initial consultation with a fertility specialist or reproductive
+                            endocrinologist. During this appointment, both the donor and the recipient (if applicable)
+                            will discuss the process in detail, including the medical and legal aspects.</p>
 
                         <h5 class="text-start">Screening and Testing</h5>
-                        <p>Before proceeding with egg donation, the donor undergoes comprehensive medical and psychological screening. This includes tests to assess her overall health, ovarian reserve, and genetic compatibility. The recipient may also undergo screening to ensure compatibility with the donor’s eggs.</p>
+                        <p>Before proceeding with egg donation, the donor undergoes comprehensive medical and
+                            psychological screening. This includes tests to assess her overall health, ovarian reserve,
+                            and genetic compatibility. The recipient may also undergo screening to ensure compatibility
+                            with the donor’s eggs.</p>
 
                         <h5>Hormonal Stimulation</h5>
-                        <p>Once cleared for donation, the donor undergoes hormonal stimulation to encourage the development of multiple eggs in her ovaries. This involves daily injections of medications to regulate her menstrual cycle and stimulate egg production.</p>
+                        <p>Once cleared for donation, the donor undergoes hormonal stimulation to encourage the
+                            development of multiple eggs in her ovaries. This involves daily injections of medications
+                            to regulate her menstrual cycle and stimulate egg production.</p>
 
                         <h5>Egg Retrieval</h5>
-                        <p>When the eggs reach maturity, they are retrieved through a minimally invasive surgical procedure called follicular aspiration. This typically takes place under sedation or anesthesia and involves using ultrasound guidance to retrieve the eggs from the ovaries.</p>
+                        <p>When the eggs reach maturity, they are retrieved through a minimally invasive surgical
+                            procedure called follicular aspiration. This typically takes place under sedation or
+                            anesthesia and involves using ultrasound guidance to retrieve the eggs from the ovaries.</p>
 
                         <h5>Female Egg Donation Program in Faridabad</h5>
-                        <p>Faridabad is home to several reputable fertility centers offering female egg donation programs. These programs are designed to facilitate the egg donation process for both donors and recipients. With state-of-the-art facilities and experienced medical professionals, Faridabad has become a sought-after destination for egg donation.</p>
+                        <p>Faridabad is home to several reputable fertility centers offering female egg donation
+                            programs. These programs are designed to facilitate the egg donation process for both donors
+                            and recipients. With state-of-the-art facilities and experienced medical professionals,
+                            Faridabad has become a sought-after destination for egg donation.</p>
 
                         <h5>Overview of the Program</h5>
-                        <p>The female egg donation program in Faridabad provides a supportive and confidential environment for donors and recipients alike. It offers comprehensive services, including donor selection, medical evaluation, and legal counseling, to ensure a smooth and successful outcome.</p>
+                        <p>The female egg donation program in Faridabad provides a supportive and confidential
+                            environment for donors and recipients alike. It offers comprehensive services, including
+                            donor selection, medical evaluation, and legal counseling, to ensure a smooth and successful
+                            outcome.</p>
 
                         <h5>Benefits for Recipients</h5>
-                        <p>Recipients of donated eggs in Faridabad benefit from access to high-quality donor eggs and advanced reproductive technologies. The program prioritizes the well-being of both donors and recipients, with personalized care and support throughout the process.</p>
+                        <p>Recipients of donated eggs in Faridabad benefit from access to high-quality donor eggs and
+                            advanced reproductive technologies. The program prioritizes the well-being of both donors
+                            and recipients, with personalized care and support throughout the process.</p>
 
-                        <h2 class="blog-head-title" id="bleeding">Choosing the Best Egg Donation Centre In Faridabad</h2>
-                        <p>Selecting the right egg donation center is crucial for a positive experience and successful outcome. When considering egg donation in Faridabad, it’s essential to evaluate various factors, including the center’s reputation, success rates, and the expertise of the medical team.</p>
+                        <h2 class="blog-head-title" id="bleeding">Choosing the Best Egg Donation Centre In Faridabad
+                        </h2>
+                        <p>Selecting the right egg donation center is crucial for a positive experience and successful
+                            outcome. When considering egg donation in Faridabad, it’s essential to evaluate various
+                            factors, including the center’s reputation, success rates, and the expertise of the medical
+                            team.</p>
 
-                        <p>Dr. Divya Kumar, a renowned fertility specialist in Faridabad, stands out as one of the best choices for egg donation. With her extensive experience and compassionate approach, Dr. Kumar has helped numerous individuals and couples achieve their dreams of parenthood through egg donation.</p>
+                        <p>Dr. Divya Kumar, a renowned fertility specialist in Faridabad, stands out as one of the best
+                            choices for egg donation. With her extensive experience and compassionate approach, Dr.
+                            Kumar has helped numerous individuals and couples achieve their dreams of parenthood through
+                            egg donation.</p>
 
                         <h2 class="blog-head-title" id="preparation">FAQs </h2>
 
                         <h6>Are there any age restrictions for egg donors ?</h6>
-                        <p>Most egg donation programs have age restrictions for donors, typically between 21 and 35 years old. However, specific criteria may vary depending on the center’s policies.</p>
+                        <p>Most egg donation programs have age restrictions for donors, typically between 21 and 35
+                            years old. However, specific criteria may vary depending on the center’s policies.</p>
 
                         <h6>What are the risks and side effects of egg donation ?</h6>
-                        <p>Egg donation carries some risks, including ovarian hyperstimulation syndrome (OHSS), infection, and bleeding. Common side effects may include bloating, discomfort, and mood swings, but these are usually temporary.</p>
+                        <p>Egg donation carries some risks, including ovarian hyperstimulation syndrome (OHSS),
+                            infection, and bleeding. Common side effects may include bloating, discomfort, and mood
+                            swings, but these are usually temporary.</p>
 
                         <h6>How long does the egg donation process take ?</h6>
-                        <p>The egg donation process typically takes four to six weeks from the initial consultation to egg retrieval. However, this timeline may vary depending on individual circumstances and the specific requirements of the program.</p>
+                        <p>The egg donation process typically takes four to six weeks from the initial consultation to
+                            egg retrieval. However, this timeline may vary depending on individual circumstances and the
+                            specific requirements of the program.</p>
 
                         <h6>Can I donate eggs anonymously ?</h6>
-                        <p>Many egg donation programs offer the option of anonymous donation, where the identity of the donor is kept confidential from the recipients. However, some programs may also allow for known or directed donation, where the donor and recipient have a preexisting relationship.</p>
+                        <p>Many egg donation programs offer the option of anonymous donation, where the identity of the
+                            donor is kept confidential from the recipients. However, some programs may also allow for
+                            known or directed donation, where the donor and recipient have a preexisting relationship.
+                        </p>
 
                         <h6>What happens to the donated eggs?</h6>
-                        <p>Donated eggs are fertilized with sperm in a laboratory to create embryos. These embryos are then transferred to the uterus of the recipient, with the goal of achieving a successful pregnancy. Unused embryos may be frozen for future use or donated for research purposes.</p>
+                        <p>Donated eggs are fertilized with sperm in a laboratory to create embryos. These embryos are
+                            then transferred to the uterus of the recipient, with the goal of achieving a successful
+                            pregnancy. Unused embryos may be frozen for future use or donated for research purposes.</p>
 
 
                         <!-- Tags -->
@@ -278,7 +323,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
