--- a/blogs.html
+++ b/blogs.html
@@ -158,7 +158,7 @@
             Blogs
           </h1>
           <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">
-            Learn more about the journey, education, and expertise.
+            Stay informed with trusted medical knowledge and health updates.
           </p>
           <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
             <a href="index.html" style="text-decoration: none; color: var(--primary-pink)">
