--- a/events.html
+++ b/events.html
@@ -233,11 +233,11 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">Events</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">A glimpse into our professional journey
+                        through events.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
-                        <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/ Events
+                        <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/
+                        Events
                     </div>
                 </div>
             </div>
@@ -284,44 +284,37 @@
                 </figure>
 
                 <figure class="gallery-item fade-in" data-category="group" data-caption="">
-                    <img src="images/imgi_20_drdivyakumar_yuvaisar5.webp" alt=""
-                        loading="lazy" />
+                    <img src="images/imgi_20_drdivyakumar_yuvaisar5.webp" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
 
                 <figure class="gallery-item fade-in" data-category="group" data-caption="">
-                    <img src="images/imgi_24_congo22.jpg" alt=""
-                        loading="lazy" />
+                    <img src="images/imgi_24_congo22.jpg" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
 
                 <figure class="gallery-item fade-in" data-category="group" data-caption="">
-                    <img src="images/imgi_26_congo24.jpg" alt=""
-                        loading="lazy" />
+                    <img src="images/imgi_26_congo24.jpg" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
 
                 <figure class="gallery-item fade-in" data-category="group" data-caption="">
-                    <img src="images/imgi_43_menstrual.webp" alt=""
-                        loading="lazy" />
+                    <img src="images/imgi_43_menstrual.webp" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
 
                 <figure class="gallery-item fade-in" data-category="group" data-caption="">
-                    <img src="images/imgi_44_health-care.webp" alt=""
-                        loading="lazy" />
+                    <img src="images/imgi_44_health-care.webp" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
 
                 <figure class="gallery-item fade-in" data-category="group" data-caption="">
-                    <img src="images/imgi_45_aicog.webp" alt=""
-                        loading="lazy" />
+                    <img src="images/imgi_45_aicog.webp" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
 
                 <figure class="gallery-item fade-in" data-category="group" data-caption="">
-                    <img src="images/imgi_46_mtpcon.webp" alt=""
-                        loading="lazy" />
+                    <img src="images/imgi_46_mtpcon.webp" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
             </div>
@@ -473,7 +466,7 @@
         }
     </script>
 
-     <script>
+    <script>
         // Filter logic
         const filterButtons = document.querySelectorAll('.filter-bar .btn');
         const items = document.querySelectorAll('.gallery-item');
