--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about-section">
+    <!-- <section id="about" class="about-section">
         <div class="container">
             <h2 class="section-title pb-5" data-aos="fade-up">About Dr. Divya Kumar</h2>
             <div class="row align-items-center">
@@ -156,7 +156,7 @@
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="about-content">
 
-                        <h3>Best Gynaecologist in Faridabad</h3>
+                        <h3>Best Gynaecologist, Infertility & IVF Specialist in Faridabad</h3>
                         <p>Dr. Divya is an esteemed gynecologist, obstetrician, and infertility specialist with more
                             than 15 years of dedicated professional practice. Her expertise extends to a broad spectrum
                             of women's health, and she is renowned for her exceptional care in the areas of high-risk
@@ -169,19 +169,60 @@
                         <div class="row mt-4">
                             <div class="col-md-4">
                                 <div class="stat-box">
-                                    <div class="stat-number">15+</div>
+                                    <div class="stat-number">19+</div>
                                     <div class="stat-label">Years Experience</div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="stat-box">
-                                    <div class="stat-number">5000+</div>
+                                    <div class="stat-number">7400+</div>
                                     <div class="stat-label">Happy Patients</div>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="stat-box">
-                                    <div class="stat-number">1200+</div>
+                                    <div class="stat-number">2350+</div>
+                                    <div class="stat-label">Deliveries</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+    <section id="about" class="about-section">
+        <div class="container">
+            <h2 class="section-title pb-5" data-aos="fade-up">About Dr. Divya Kumar</h2>
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
+                    <div class="about-image">
+                        <img src="images/imgi_5_dr.divya-about.webp" alt="Dr. Divya Kumar" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6" data-aos="fade-left">
+                    <div class="about-content">
+
+                        <h3>Best Gynaecologist, Infertility & IVF Specialist in Faridabad</h3>
+                        <p><strong>Dr. Divya</strong> is an esteemed gynecologist, obstetrician, and infertility specialist with more than 15 years of dedicated professional practice. Her expertise extends to a broad spectrum of women's health, and she is renowned for her exceptional care in the areas of high-risk pregnancy treatment, recurrent miscarriage management, advanced gynecological endoscopic surgeries, and infertility treatments, including in vitro fertilization (IVF). As a female surgeon in Faridabad, her unwavering commitment to women's health has solidified her reputation as a respected figure in her field. If you're searching for a gynecologist in Faridabad, Dr. Divya is the trusted expert you can turn to for comprehensive care.</p>
+
+                        <div class="row mt-4">
+                            <div class="col-md-4">
+                                <div class="stat-box">
+                                    <div class="stat-number" data-target="19">0</div>
+                                    <div class="stat-label">Years Experience</div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="stat-box">
+                                    <div class="stat-number" data-target="7400">0</div>
+                                    <div class="stat-label">Happy Patients</div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="stat-box">
+                                    <div class="stat-number" data-target="2350">0</div>
                                     <div class="stat-label">Deliveries</div>
                                 </div>
                             </div>
@@ -193,6 +234,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Services Section -->
     <section id="services" class="services-section">
@@ -495,7 +537,7 @@
                 </div>
 
                 <!-- treatment 4 -->
-                <div class="treatment-card" data-aos="fade-up" data-aos-delay="400">
+                <div class="treatment-card" data-aos="fade-up">
                     <div class="treatment-image">
                         <img src="images/imgi_34_a3.webp" alt="High Risk Pregnancy">
                     </div>
@@ -509,8 +551,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section>
         <div class="container">
@@ -760,9 +800,6 @@
         </div>
     </section>
 
-
-
-
     <!-- Video Gallery Section -->
     <section class="video-gallery-section">
         <div class="container">
@@ -886,7 +923,7 @@
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in">
                     <a href="images/imgi_7_congo5.jpg" data-fancybox="gallery" class="gallery-item">
                         <img src="images/imgi_7_congo5.jpg" alt="">
-                        <div class="gallery-overlay">
+                        <div class="index-gallery-overlay">
                             <i class="bi bi-zoom-in"></i>
                         </div>
                     </a>
@@ -895,7 +932,7 @@
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                     <a href="images/imgi_47_gallery10.webp" data-fancybox="gallery" class="gallery-item">
                         <img src="images/imgi_47_gallery10.webp" alt="Consultation Room">
-                        <div class="gallery-overlay">
+                        <div class="index-gallery-overlay">
                             <i class="bi bi-zoom-in"></i>
                         </div>
                     </a>
@@ -904,7 +941,7 @@
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                     <a href="images/imgi_36_gallery15.webp" data-fancybox="gallery" class="gallery-item">
                         <img src="images/imgi_36_gallery15.webp" alt="Medical Equipment">
-                        <div class="gallery-overlay">
+                        <div class="index-gallery-overlay">
                             <i class="bi bi-zoom-in"></i>
                         </div>
                     </a>
@@ -913,7 +950,7 @@
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in">
                     <a href="images/imgi_47_gallery10.webp" data-fancybox="gallery" class="gallery-item">
                         <img src="images/imgi_47_gallery10.webp" alt="Reception Area">
-                        <div class="gallery-overlay">
+                        <div class="index-gallery-overlay">
                             <i class="bi bi-zoom-in"></i>
                         </div>
                     </a>
@@ -922,7 +959,7 @@
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
                     <a href="images/imgi_49_gallery12.webp" data-fancybox="gallery" class="gallery-item">
                         <img src="images/imgi_49_gallery12.webp" alt="Happy Patient">
-                        <div class="gallery-overlay">
+                        <div class="index-gallery-overlay">
                             <i class="bi bi-zoom-in"></i>
                         </div>
                     </a>
@@ -931,7 +968,7 @@
                 <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                     <a href="images/imgi_51_gallery14.webp" data-fancybox="gallery" class="gallery-item">
                         <img src="images/imgi_51_gallery14.webp" alt="Newborn Care">
-                        <div class="gallery-overlay">
+                        <div class="index-gallery-overlay">
                             <i class="bi bi-zoom-in"></i>
                         </div>
                     </a>
@@ -1385,6 +1422,49 @@
                 768: { slidesPerView: 2 },
                 1200: { slidesPerView: 3 },
             },
+        });
+    </script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const counters = document.querySelectorAll(".stat-number");
+            let started = false;
+
+            function startCount() {
+                if (started) return;
+                counters.forEach(counter => {
+                    counter.innerText = "0";
+                    let target = +counter.getAttribute("data-target");
+                    let speed = 20;
+
+                    function updateCount() {
+                        let current = +counter.innerText;
+                        let increment = Math.ceil(target / 100);
+
+                        if (current < target) {
+                            counter.innerText = current + increment;
+                            setTimeout(updateCount, speed);
+                        } else {
+                            counter.innerText = target + "+";
+                        }
+                    }
+                    updateCount();
+                });
+                started = true;
+            }
+
+            // Trigger when in viewport
+            function onScroll() {
+                const section = document.getElementById("about");
+                let position = section.getBoundingClientRect().top;
+                let windowHeight = window.innerHeight;
+
+                if (position < windowHeight - 100) {
+                    startCount();
+                    window.removeEventListener("scroll", onScroll);
+                }
+            }
+            window.addEventListener("scroll", onScroll);
         });
     </script>
 
