--- a/video-gallery.html
+++ b/video-gallery.html
@@ -120,9 +120,8 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">Video-Gallery</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Explore insightful discussions, patient
+                        stories, and educational guidance.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/
                         Video-Gallery
@@ -365,7 +364,8 @@
                     <ul class="footer-links">
                         <li><i class="bi bi-clock me-2"></i>Accord Superspeciality <br> Hospital 24x7 Available</li>
                         <li><i class="bi bi-clock me-2"></i>Home Clinic - House No. 1343, Sector - 21, Mon-Sat: 6PM-8PM
-                            <br>By Appointment</li>
+                            <br>By Appointment
+                        </li>
                     </ul>
                 </div>
 
