--- a/blog-five.html
+++ b/blog-five.html
@@ -122,9 +122,8 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">In Vitro Fertilization</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Understanding the IVF journey,
+                        treatment steps, and support.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
                             href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> /
@@ -331,19 +330,24 @@
 
                         <h2 class="blog-head-title" id="faqs">FAQs</h2>
                         <h6>How long does the IVF process take from start to finish?</h6>
-                        <p>The IVF process typically takes four to six weeks from the beginning of ovarian stimulation to embryo transfer.</p>
+                        <p>The IVF process typically takes four to six weeks from the beginning of ovarian stimulation
+                            to embryo transfer.</p>
 
                         <h6>Is IVF painful?</h6>
-                        <p>While discomfort may occur during certain stages, such as egg retrieval, anesthesia is administered to minimize pain.</p>
+                        <p>While discomfort may occur during certain stages, such as egg retrieval, anesthesia is
+                            administered to minimize pain.</p>
 
                         <h6>What factors contribute to IVF success?</h6>
-                        <p>Age, egg quality, sperm quality, and overall health are significant determinants of IVF success.</p>
+                        <p>Age, egg quality, sperm quality, and overall health are significant determinants of IVF
+                            success.</p>
 
                         <h6>Are there any side effects of IVF medications?</h6>
-                        <p>Mild side effects such as bloating and mood swings are common but usually subside after treatment.</p>
+                        <p>Mild side effects such as bloating and mood swings are common but usually subside after
+                            treatment.</p>
 
                         <h6>Is IVF covered by insurance?</h6>
-                        <p> Insurance coverage for IVF varies depending on the provider and policy. It’s advisable to check with your insurance company beforehand.</p>
+                        <p> Insurance coverage for IVF varies depending on the provider and policy. It’s advisable to
+                            check with your insurance company beforehand.</p>
 
                         <!-- Tags -->
                         <div class="mt-4">
@@ -360,7 +364,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
