--- a/blog-six.html
+++ b/blog-six.html
@@ -122,12 +122,12 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">High Risk Pregnancy</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Understand the care, monitoring, and
+                        support needed during a high-risk pregnancy.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
-                            href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> / 5 Do's and Dont's During a High Risk Pregnancy
+                            href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> / 5
+                        Do's and Dont's During a High Risk Pregnancy
                     </div>
                 </div>
             </div>
@@ -159,13 +159,13 @@
                             <div class="toc-item" onclick="scrollToSection('ovarian')">
                                 <i class="fas fa-chevron-right me-2"></i> Don't : Ignore Warning Signs
                             </div>
-                             <div class="toc-item" onclick="scrollToSection('monitoring')">
+                            <div class="toc-item" onclick="scrollToSection('monitoring')">
                                 <i class="fas fa-chevron-right me-2"></i> Do : Seek Support
                             </div>
                             <div class="toc-item" onclick="scrollToSection('consult')">
                                 <i class="fas fa-chevron-right me-2"></i> Conclusion
                             </div>
-                           
+
                             <!-- <div class="toc-item" onclick="scrollToSection('retrieval')">
                                 <i class="fas fa-chevron-right me-2"></i> Conclusion
                             </div>
@@ -225,36 +225,80 @@
                 <div class="col-lg-8">
                     <div class="blog-details-card" data-aos="fade-left" data-aos-delay="200">
                         <h2 class="blog-head-title" id="high">5 Do's and Dont's During a High Risk Pregnancy</h2>
-                        
-                        <p class="">Pregnancy is a joyous journey for most women, but it can also be accompanied by challenges, especially if it’s categorized as high-risk. Dr. Divya Kumar, renowned as the best gynecologist specializing in high-risk pregnancies in Faridabad, understands the complexities involved. With her expertise and guidance, expectant mothers can navigate through these challenging times with confidence. In this blog, we’ll delve into five essential do’s and don’ts during a high-risk pregnancy, as recommended by Dr. Divya Kumar.</p>
+
+                        <p class="">Pregnancy is a joyous journey for most women, but it can also be accompanied by
+                            challenges, especially if it’s categorized as high-risk. Dr. Divya Kumar, renowned as the
+                            best gynecologist specializing in high-risk pregnancies in Faridabad, understands the
+                            complexities involved. With her expertise and guidance, expectant mothers can navigate
+                            through these challenging times with confidence. In this blog, we’ll delve into five
+                            essential do’s and don’ts during a high-risk pregnancy, as recommended by Dr. Divya Kumar.
+                        </p>
 
                         <!-- Understanding Section -->
                         <h2 class="blog-head-title" id="choose">Do: Prioritize Regular Prenatal Check-ups</h2>
-                        <p>Regular prenatal check-ups are crucial during a high-risk pregnancy. Dr. Divya Kumar emphasizes the importance of frequent monitoring to ensure both maternal and fetal well-being. These check-ups allow early detection of any complications, enabling timely interventions. From blood pressure monitoring to fetal growth assessments, every aspect is meticulously examined to mitigate risks. By adhering to scheduled appointments, expectant mothers can stay informed about their health status and make informed decisions under Dr. Divya Kumar’s expert guidance.</p>
+                        <p>Regular prenatal check-ups are crucial during a high-risk pregnancy. Dr. Divya Kumar
+                            emphasizes the importance of frequent monitoring to ensure both maternal and fetal
+                            well-being. These check-ups allow early detection of any complications, enabling timely
+                            interventions. From blood pressure monitoring to fetal growth assessments, every aspect is
+                            meticulously examined to mitigate risks. By adhering to scheduled appointments, expectant
+                            mothers can stay informed about their health status and make informed decisions under Dr.
+                            Divya Kumar’s expert guidance.</p>
 
                         <!-- Types of Cysts -->
                         <h2 class="blog-head-title" id="meet">Don’t: Neglect Dietary and Lifestyle Changes</h2>
-                        <p>Diet and lifestyle modifications play a pivotal role in managing high-risk pregnancies. Dr. Divya Kumar advises against neglecting these aspects. Expectant mothers should adhere to a balanced diet rich in essential nutrients, vitamins, and minerals. Additionally, avoiding harmful substances like alcohol and tobacco is imperative. Dr. Divya Kumar educates her patients about the significance of maintaining a healthy lifestyle, including regular exercise and adequate rest. These measures not only promote maternal health but also contribute to fetal development, ensuring a smoother pregnancy journey.</p>
+                        <p>Diet and lifestyle modifications play a pivotal role in managing high-risk pregnancies. Dr.
+                            Divya Kumar advises against neglecting these aspects. Expectant mothers should adhere to a
+                            balanced diet rich in essential nutrients, vitamins, and minerals. Additionally, avoiding
+                            harmful substances like alcohol and tobacco is imperative. Dr. Divya Kumar educates her
+                            patients about the significance of maintaining a healthy lifestyle, including regular
+                            exercise and adequate rest. These measures not only promote maternal health but also
+                            contribute to fetal development, ensuring a smoother pregnancy journey.</p>
 
 
                         <!-- When Surgery is Needed -->
-                        <h2 class="blog-head-title" id="process">Do: Communicate Openly with Your Healthcare Provider</h2>
+                        <h2 class="blog-head-title" id="process">Do: Communicate Openly with Your Healthcare Provider
+                        </h2>
 
-                        <p>Effective communication between the patient and healthcare provider is paramount during a high-risk pregnancy. Dr. Divya Kumar emphasizes the need for open dialogue to address any concerns or queries. Patients should feel comfortable discussing their symptoms, fears, and apprehensions with Dr. Divya Kumar, who offers compassionate support and evidence-based guidance. Clear communication facilitates personalized care and enables timely interventions if any complications arise. Trusting the expertise of Dr. Divya Kumar fosters a collaborative approach towards managing the pregnancy journey effectively.
+                        <p>Effective communication between the patient and healthcare provider is paramount during a
+                            high-risk pregnancy. Dr. Divya Kumar emphasizes the need for open dialogue to address any
+                            concerns or queries. Patients should feel comfortable discussing their symptoms, fears, and
+                            apprehensions with Dr. Divya Kumar, who offers compassionate support and evidence-based
+                            guidance. Clear communication facilitates personalized care and enables timely interventions
+                            if any complications arise. Trusting the expertise of Dr. Divya Kumar fosters a
+                            collaborative approach towards managing the pregnancy journey effectively.
                         </p>
 
                         <!-- Diagnostic Procedures -->
                         <h2 class="blog-head-title" id="ovarian">Don’t: Ignore Warning Signs</h2>
-                        <p>Ignoring warning signs or symptoms can exacerbate risks associated with high-risk pregnancies. Dr. Divya Kumar advises expectant mothers to be vigilant and proactive in recognizing any alarming symptoms such as persistent abdominal pain, vaginal bleeding, or sudden swelling. These could indicate underlying complications that require immediate medical attention. By promptly reporting such symptoms to Dr. Divya Kumar, potential complications can be addressed promptly, minimizing adverse outcomes for both the mother and the baby.</p>
+                        <p>Ignoring warning signs or symptoms can exacerbate risks associated with high-risk
+                            pregnancies. Dr. Divya Kumar advises expectant mothers to be vigilant and proactive in
+                            recognizing any alarming symptoms such as persistent abdominal pain, vaginal bleeding, or
+                            sudden swelling. These could indicate underlying complications that require immediate
+                            medical attention. By promptly reporting such symptoms to Dr. Divya Kumar, potential
+                            complications can be addressed promptly, minimizing adverse outcomes for both the mother and
+                            the baby.</p>
 
                         <!-- Types of Surgery -->
                         <h2 class="blog-head-title" id="monitoring">Do: Educate Yourself and Seek Support</h2>
 
-                        <p>Education empowers expectant mothers to make informed decisions and actively participate in their care. Dr. Divya Kumar encourages her patients to educate themselves about their condition, potential risks, and available treatment options. Attending childbirth classes and seeking support from family, friends, or support groups can alleviate anxiety and provide valuable insights. Dr. Divya Kumar fosters a supportive environment where expectant mothers feel empowered and equipped to navigate the challenges of a high-risk pregnancy confidently..</p>
+                        <p>Education empowers expectant mothers to make informed decisions and actively participate in
+                            their care. Dr. Divya Kumar encourages her patients to educate themselves about their
+                            condition, potential risks, and available treatment options. Attending childbirth classes
+                            and seeking support from family, friends, or support groups can alleviate anxiety and
+                            provide valuable insights. Dr. Divya Kumar fosters a supportive environment where expectant
+                            mothers feel empowered and equipped to navigate the challenges of a high-risk pregnancy
+                            confidently..</p>
 
                         <!-- Pre-Surgical Preparation -->
                         <h2 class="blog-head-title" id="consult">Conclusion</h2>
-                        <p>Navigating a high-risk pregnancy requires a comprehensive approach encompassing medical expertise, proactive management, and emotional support. Dr. Divya Kumar, recognized as the best gynecologist specializing in high-risk pregnancies in Faridabad, ensures personalized care and support for expectant mothers. By adhering to the recommended do’s and don’ts, expectant mothers can optimize their chances of a successful pregnancy outcome under Dr. Divya Kumar’s expert guidance. With her compassionate approach and commitment to maternal-fetal health, Dr. Divya Kumar continues to be a beacon of hope for women facing the challenges of high-risk pregnancies in Faridabad.</p>
+                        <p>Navigating a high-risk pregnancy requires a comprehensive approach encompassing medical
+                            expertise, proactive management, and emotional support. Dr. Divya Kumar, recognized as the
+                            best gynecologist specializing in high-risk pregnancies in Faridabad, ensures personalized
+                            care and support for expectant mothers. By adhering to the recommended do’s and don’ts,
+                            expectant mothers can optimize their chances of a successful pregnancy outcome under Dr.
+                            Divya Kumar’s expert guidance. With her compassionate approach and commitment to
+                            maternal-fetal health, Dr. Divya Kumar continues to be a beacon of hope for women facing the
+                            challenges of high-risk pregnancies in Faridabad.</p>
 
                         <!-- Tags -->
                         <div class="mt-4">
@@ -272,7 +316,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
