--- a/blog-two.html
+++ b/blog-two.html
@@ -121,9 +121,8 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">Uterine Bleeding</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Understanding causes, symptoms, and
+                        treatments for abnormal uterine bleeding.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
                         <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/<a
                             href="blogs.html" style="text-decoration: none;color: var(--primary-pink);"> Blogs</a> /
@@ -298,7 +297,9 @@
                         <p class="mb-4">Schedule an appointment with Dr. Divya Kumar for personalized care and
                             treatment
                         </p>
-                        <button class="cta-btn">Book Appointment</button>
+                        <a href="contact.html">
+                            <button class="cta-btn">Book Appointment</button>
+                        </a>
                     </div>
                 </div>
 
