--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Google Fonts -->
     <link
@@ -156,16 +156,22 @@
                             <li><a class="dropdown-item" href="endometriosis.html">Endometriosis</a></li>
                             <li><a class="dropdown-item" href="uterine-bleeding.html">Uterine Bleeding</a></li>
                             <li><a class="dropdown-item" href="high-risk-pregnancy.html">High Risk Pregnancy</a></li>
-                            <li><a class="dropdown-item" href="heterotopic-pregnancy.html">Heterotopic Pregnancy</a></li>
+                            <li><a class="dropdown-item" href="heterotopic-pregnancy.html">Heterotopic Pregnancy</a>
+                            </li>
                             <li><a class="dropdown-item" href="icsi.html">ICSI Treatment</a></li>
                             <li><a class="dropdown-item" href="infertility.html">Infertility</a></li>
                             <li><a class="dropdown-item" href="mymectomy.html">Myomectomy</a></li>
-                            <li><a class="dropdown-item" href="pregnancy-in-diabetes-mellitus.html">Pregnancy In Diabetes Mellitus</a></li>
-                            <li><a class="dropdown-item" href="pregnancy-in-hypertension.html">Pregnancy In Hypertension</a></li>
-                            <li><a class="dropdown-item" href="pregnancy-in-twins.html">Pregnancy In Multiple Twins</a></li>
-                            <li><a class="dropdown-item" href="pregnancy-in-rh-incompatibility.html">Pregnancy In RH Incompatibility</a></li>
+                            <li><a class="dropdown-item" href="pregnancy-in-diabetes-mellitus.html">Pregnancy In
+                                    Diabetes Mellitus</a></li>
+                            <li><a class="dropdown-item" href="pregnancy-in-hypertension.html">Pregnancy In
+                                    Hypertension</a></li>
+                            <li><a class="dropdown-item" href="pregnancy-in-twins.html">Pregnancy In Multiple Twins</a>
+                            </li>
+                            <li><a class="dropdown-item" href="pregnancy-in-rh-incompatibility.html">Pregnancy In RH
+                                    Incompatibility</a></li>
                             <li><a class="dropdown-item" href="pregnancy-in-obesity.html">Pregnancy In Obesity</a></li>
-                            <li><a class="dropdown-item" href="recurrent-pregnancy-loss.html">Recurrent Pregnancy Loss</a></li>
+                            <li><a class="dropdown-item" href="recurrent-pregnancy-loss.html">Recurrent Pregnancy
+                                    Loss</a></li>
                             <li><a class="dropdown-item" href="tubal-cannulation.html">Tubal cannulation</a></li>
                         </ul>
                     </li>
@@ -209,12 +215,10 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-12 text-center">
                     <h1 class="title ff-heading " data-aos="fade-up" data-aos-delay="200">News</h1>
-                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Learn more about the journey,
-                        education, and
-                        expertise.</p>
+                    <p class="lead mb-0" data-aos="fade-up" data-aos-delay="300">Latest updates, announcements, and
+                        insights in women’s healthcare.</p>
                     <div class="breadcrumb-custom" data-aos="fade-up" data-aos-delay="400">
-                        <a href="index.html"
-                            style="text-decoration: none;color: var(--primary-pink);"> Home </a>/ News
+                        <a href="index.html" style="text-decoration: none;color: var(--primary-pink);"> Home </a>/ News
                     </div>
                 </div>
             </div>
@@ -280,7 +284,7 @@
                     <img src="images/imgi_13_dr.divya-med-talks.webp" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
                 </figure>
-                
+
                 <figure class="gallery-item fade-in" data-category="moment" data-caption="">
                     <img src="images/imgi_14_dr.divya-newspaper-article2.webp" alt="" loading="lazy" />
                     <figcaption class="overlay"></figcaption>
@@ -291,7 +295,7 @@
                     <figcaption class="overlay"></figcaption>
                 </figure>
 
-        </div>
+            </div>
     </section>
 
     <div class="modal fade modal-dark" id="lightboxModal" tabindex="-1" aria-hidden="true">
@@ -326,7 +330,7 @@
 
 
     <!-- Footer -->
-     <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
@@ -337,7 +341,7 @@
                     </div>
                     <p style="color: #bbb;">Leading Women's Health Specialist providing compassionate care and expert
                         medical treatment for all stages of a woman's life.</p>
-                     <div class="social-icons mt-3">
+                    <div class="social-icons mt-3">
                         <a href="https://www.facebook.com/DrDivyaKumarOfficial"><i class="bi bi-facebook"></i></a>
                         <a href="https://www.instagram.com/drdivyakumarofficial"><i class="bi bi-instagram"></i></a>
                         <a href="https://www.youtube.com/@drdivyakumar4082"><i class="bi bi-youtube"></i></a>
@@ -357,8 +361,9 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>Meeting Hours</h5>
                     <ul class="footer-links">
-                        <li><i class="bi bi-clock me-2"></i>Accord Superspeciality <br> Hospital  24x7 Available</li>
-                        <li><i class="bi bi-clock me-2"></i>Home Clinic - House No. 1343, Sector - 21,  Mon-Sat: 6PM-8PM <br>By Appointment</li>
+                        <li><i class="bi bi-clock me-2"></i>Accord Superspeciality <br> Hospital 24x7 Available</li>
+                        <li><i class="bi bi-clock me-2"></i>Home Clinic - House No. 1343, Sector - 21, Mon-Sat: 6PM-8PM
+                            <br>By Appointment</li>
                     </ul>
                 </div>
 
